fix: table not centered on desktop

--- a/assets/css/business.css
+++ b/assets/css/business.css
@@ -100,6 +100,9 @@ main .badge img {
 .plans {
   margin: auto;
   padding: 2rem 1rem;
+
+  width: max-content;
+  max-width: 100%;
 }
 
 .plans h2 {
